Make PAGE min width 50% to avoid footer jumping

--- a/src/routes/ContactPage/style.scss
+++ b/src/routes/ContactPage/style.scss
@@ -4,6 +4,7 @@
 .contactC {
 	margin: 0 auto;
 	width: 100%;
+	min-height: 50%;
 	background: $whitePure;
 
 	padding: $headerHeightXs 0 0 0;
