--- a/src/routes/PromotionPage/style.scss
+++ b/src/routes/PromotionPage/style.scss
@@ -3,7 +3,7 @@
 
 .promotionC {
 	margin: 0 auto;
-	width: 100%;
+	width: 100%; min-height: 50%;
 	background: $whitePure;
 
 	padding: $headerHeightXs 0 0 0;
